[gd_scene load_steps=19 format=3 uid="uid://btl1e5x4iv3p5"]

[ext_resource type="FontFile" uid="uid://caq3b34gdt0oj" path="res://resources/fonts/Comfortaa-VariableFont_wght.ttf" id="1_ex30y"]
[ext_resource type="Script" path="res://resources/scenes/splash/scripts/splash_screen.gd" id="1_yxwjt"]
[ext_resource type="Texture2D" uid="uid://b1jp30ai5f8kp" path="res://resources/sprites/IFg.png" id="2_b36d3"]
[ext_resource type="Shader" path="res://resources/shaders/crt_postprocess.gdshader" id="3_5f70m"]
[ext_resource type="Shader" path="res://resources/shaders/glint.gdshader" id="4_e55yc"]
[ext_resource type="Texture2D" uid="uid://clqirh6socmxk" path="res://resources/sprites/Themaxwellcompany_dark.png" id="4_kmykr"]
[ext_resource type="Texture2D" uid="uid://bu3sg34npou7c" path="res://resources/sprites/max9th.png" id="6_ufm2q"]
[ext_resource type="FontFile" uid="uid://crc4df8q4f8i6" path="res://resources/fonts/Vipervibes.ttf" id="7_6h4xt"]
[ext_resource type="Texture2D" uid="uid://4hlbl2jngrh7" path="res://resources/sprites/skip.png" id="9_vmk0t"]
[ext_resource type="AudioStream" uid="uid://wrlc801ukxib" path="res://resources/audio/startup.mp3" id="10_3437e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63reo"]
bg_color = Color(0.0627451, 0.0784314, 0.121569, 1)

[sub_resource type="LabelSettings" id="LabelSettings_12up3"]
font = ExtResource("1_ex30y")
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nski4"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_2umt0"]
font = ExtResource("1_ex30y")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_psndg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rfvjg"]
shader = ExtResource("4_e55yc")
shader_parameter/Line_Smoothness = 0.045
shader_parameter/Line_Width = 0.09
shader_parameter/Brightness = 3.0
shader_parameter/Rotation_deg = 30.0
shader_parameter/Distortion = 1.8
shader_parameter/Speed = 0.7
shader_parameter/Position = 0.0
shader_parameter/Position_Min = 0.25
shader_parameter/Position_Max = 0.5
shader_parameter/Alpha = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_dy2l2"]
line_spacing = 2.0
font = ExtResource("7_6h4xt")
font_size = 24
font_color = Color(0.545098, 0.607843, 0.705882, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yf3s5"]
shader = ExtResource("3_5f70m")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.22
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 12.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.0
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.03
shader_parameter/aberration = 4.75e-08
shader_parameter/brightness = 1.055
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.157
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="splash_screen" type="CanvasLayer"]
script = ExtResource("1_yxwjt")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_63reo")

[node name="Copyright" type="Label" parent="."]
texture_filter = 5
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -617.0
offset_top = -25.0
offset_right = 462.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(643, 0)
size_flags_horizontal = 4
text = "The Maxwell company (Miguel J.)"
label_settings = SubResource("LabelSettings_12up3")

[node name="IFG" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 192.0
offset_right = -800.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="IFG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(88, 112)
theme_override_styles/panel = SubResource("StyleBoxFlat_nski4")

[node name="Label" type="Label" parent="IFG"]
texture_filter = 5
layout_mode = 0
offset_left = 224.0
offset_top = 64.0
offset_right = 772.0
offset_bottom = 191.0
pivot_offset = Vector2(-120, 64)
text = " 27/09/2024
Instituto Federal de Educação, Ciência e Tecnologia do Goiás
Campûs: Valparaíso de Goiás 
		Curso: Técnico Integrado em Automação Industrial 1 
2º Bimestre de Arte I regido pelo Mestre Igor Carvalho Rodrigues"
label_settings = SubResource("LabelSettings_2umt0")

[node name="IFg_logo" type="TextureRect" parent="IFG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -86.0
offset_right = 96.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(92, 86)
texture = ExtResource("2_b36d3")
expand_mode = 1
stretch_mode = 4

[node name="IFGtimer" type="Timer" parent="IFG"]
wait_time = 2.0
one_shot = true

[node name="MAX" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Maxthelogo2" type="TextureRect" parent="MAX"]
material = SubResource("ShaderMaterial_psndg")
layout_mode = 0
offset_left = 260.0
offset_top = 256.0
offset_right = 400.0
offset_bottom = 396.0
texture = ExtResource("4_kmykr")

[node name="center" type="Control" parent="MAX"]
anchors_preset = 0
offset_left = 260.0
offset_top = 256.0
offset_right = 786.0
offset_bottom = 394.0

[node name="TextureRect" type="TextureRect" parent="MAX/center"]
clip_children = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 42.5
offset_top = -51.0
offset_right = 105.5
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6, 6)
pivot_offset = Vector2(31.5, 0)
texture = ExtResource("6_ufm2q")
stretch_mode = 4

[node name="glint" type="ColorRect" parent="MAX/center/TextureRect"]
visible = false
material = SubResource("ShaderMaterial_rfvjg")
layout_mode = 0
offset_left = 62.0
offset_top = 18.0
offset_right = 123.0
offset_bottom = 36.0
rotation = 3.14159

[node name="Label" type="Label" parent="MAX/center"]
layout_mode = 0
offset_left = 177.0
offset_top = 108.0
offset_right = 711.0
offset_bottom = 136.0
scale = Vector2(0.6, 0.6)
text = "Miguel Jorge Freitas de O."
label_settings = SubResource("LabelSettings_dy2l2")

[node name="glintstart" type="Timer" parent="MAX"]
wait_time = 0.2
one_shot = true

[node name="Maxtimer" type="Timer" parent="MAX"]
wait_time = 4.0
one_shot = true

[node name="skip" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -72.0
offset_right = 20.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(20, 0)
tooltip_text = "Skip Bootscreen"
texture_normal = ExtResource("9_vmk0t")
stretch_mode = 0

[node name="crt" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_yf3s5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_3437e")
bus = &"boot"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(576, 324)
gizmo_extents = 69.0

[node name="start" type="Timer" parent="."]
one_shot = true

[node name="Node" type="Node" parent="."]

[connection signal="timeout" from="IFG/IFGtimer" to="." method="_on_if_gtimer_timeout"]
[connection signal="timeout" from="MAX/glintstart" to="." method="_on_glintstart_timeout"]
[connection signal="timeout" from="MAX/Maxtimer" to="." method="_on_maxtimer_timeout"]
[connection signal="pressed" from="skip" to="." method="_on_skip_pressed"]
[connection signal="timeout" from="start" to="." method="_on_start_timeout"]
